<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trace and Trust</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fbButtonText">Facebook</string>
    <string name="twitterButtonText">Twitter</string>
    <string name="skipText">Skip Login</string>
    <string name="searchTitle">Search</string>
    <string name="resultsTitle">My Current Forage</string>
    <string name="qrTitle">QR Scanner</string>
    <string name="profileTitle">My Profile</string>
    <string name="title_activity_home">Trace and Trust</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">Search By Restaurant</string>
    <string name="filter_search_text">Filter Search Results</string>
    <string name="products_harvested">Products Harvested Within</string>
    <string name="productCategory">Product Category</string>
    <string name="productPrompt">Product</string>
    <string name="farmOrVesselPrompt">Farm or Vessel</string>
    <string name="harvestLocationPrompt">Harvest Location</string>
    <string name="associationsPrompt">Associations</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="mapView">Map View</string>
    <string name="listView">List View</string>
    <string name="tabLabelInfo">Restaurant Information</string>
    <string name="tabLabelRecentDeliveries">Recent Deliveries</string>
    <string name="facebookRestaurantButton">Facebook</string>
    <string name="webRestaurantButton">Web</string>


    <string-array name="planets_array">
        <item>My Current Forage</item>
        <item>Profile</item>
        <item>QR Scanner</item>
        <item>Preferences</item>
        <item>About</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="currentView">Change View</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="withinmiles">Products Harvested Within</string>
    <string name="title_activity_load_data">loadData</string>
    <string name="title_activity_restaurant_view_page">RestaurantViewPage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
