<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/searchOutline"
    android:background="#ffffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/filter_search_text"
        android:id="@+id/textView"
        android:textColor="#ff000000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffafafaf"
        android:layout_below="@+id/textView"
        android:id="@+id/view" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view"
        android:layout_marginTop="15dp"
        android:layout_above="@+id/linearLayout" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/scrollView"
        android:background="#ffafafaf" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"
            android:textColor="#ff000000"

            android:layout_weight="1"
            android:clickable="true"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:gravity="center"
            android:onClick="cancelSearch" />
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#ffafafaf"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:id="@+id/applyButton"
            android:textColor="#ff000000"
            android:layout_weight="1"
            android:clickable="true"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:gravity="center"
            android:onClick="applySearch" />
    </LinearLayout>

</RelativeLayout>